# SymbolicMatMul

./: .gitignore  CMakeLists.txt
src/: matrix.h
test/: matrix.cpp
